--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <div class="container">
   <div class="berita">
-    <h2>chealse juara wc musim ini </h2>
+    <h2>chealsea juara wc musim ini </h2>
     <p><strong>31 Juli 2025</strong> - Tim RRQ berhasil menjuarai Liga 1 setelah mengalahkan rivalnya dengan skor 3-1. Ini menjadi gelar ke-4 dalam sejarah klub.</p>
   </div>
 
